--- a/src/05-components/_buttonLink.scss
+++ b/src/05-components/_buttonLink.scss
@@ -42,7 +42,7 @@
 
 	@media (min-width: $viewportMd + 1) {
 		/// desktop
-		--cl: var(--rew) !important;
+		--cl: var(--rw) !important;
 		--bg: transparent !important;
 
 		/// ruta activa
@@ -67,31 +67,41 @@
 				&:hover,
 				&.is__active,
 				&.is__routeExact {
-					--rew: #{color(primaryAlt)};
+					--rw: #{color(primaryAlt)};
 				}
 			}
 			&-primary-light {
 				&:hover,
 				&.is__active,
 				&.is__routeExact {
-					--rew: #{color(primary)};
+					--rw: #{color(primary)};
+				}
+			}
+			&-danger-light {
+				--rw: #{color(danger)};
+				&:hover:not(.is__active):not(.is__routeExact) {
+					--rw: #{color(danger, 0.5)};
+				}
+				&.is__active,
+				&.is__routeExact {
+					--rw: #{color(danger, 0.7)};
 				}
 			}
 			&-primary-light,
 			&-light-primaryAlt {
-				--rew: #{color(light)};
+				--rw: #{color(light)};
 			}
 		}
 		/// default theme: secondary
 		&:not([class*="u__tm"]),
 		&.u__tm-secondary-light {
-			--rew: #{color(secondary)};
+			--rw: #{color(secondary)};
 			&:hover:not(.is__active):not(.is__routeExact) {
-				--rew: #{color(dark, 0.5)};
+				--rw: #{color(dark, 0.5)};
 			}
 			&.is__active,
 			&.is__routeExact {
-				--rew: #{color(dark, 0.7)};
+				--rw: #{color(dark, 0.7)};
 			}
 		}
 		i.x-icon {
