--- a/src/05-components/_navigationX.scss
+++ b/src/05-components/_navigationX.scss
@@ -254,7 +254,7 @@
 					padding-left: 1rem;
 					&:not(:last-child) {
 						// margin-bottom: 1rem;
-						--gap: 1rem;
+						--gap-y: 1rem;
 					}
 					a,
 					p {
